--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -1,1 +1,14 @@
-<p>company-list works!</p>
+
+
+
+<h1 class="mt-5">Listado de empresas <i class="bi bi-people-fill"></i> </h1>
+      <table class="table table-striped mt-5">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Foto</th>
+            <th scope="col">Ubicacion</th>
+            <th scope="col">Valoracion</th>
+          </tr>
+        </thead>
