Edicion de treatment-list

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -32,3 +32,4 @@
     <p class="text-center text-body-secondary" _msttexthash="356161" _msthash="19">© 2023 Compañía, Inc</p>
   </footer>
 </div>
+<router-outlet></router-outlet>
