enrutado pantalla treatment-list

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,17 +8,14 @@
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="#">Spa</a>
         <a class="nav-link" href="#">Peluqueria</a>
-        <a class="nav-link" href="#">Pedicure</a>
+        <a class="nav-link" href="treatments">Tratamientos</a>
         <a class="nav-link disabled" aria-disabled="true">Depilación</a>
       </div>
     </div>
   </div>
 </nav>
-<app-home></app-home>
 
-
-
-
+<router-outlet></router-outlet>
 
 <div class="container">
   <footer class="py-3 my-4">
@@ -32,4 +29,3 @@
     <p class="text-center text-body-secondary" _msttexthash="356161" _msthash="19">© 2023 Compañía, Inc</p>
   </footer>
 </div>
-<router-outlet></router-outlet>
