--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -5,10 +5,10 @@
       <h1 class="mt-5">Listado de Tratamientos <i class="bi bi-book"></i></h1>
 
       <button class="btn btn-primary"
-      routerLink="/treatments/create">Crear producto</button>
+      routerLink="/treatments/create">Crear Tratamiento</button>
 
-      <table class="table table-striped mt-5">
-        <thead>
+      <table class="table table-dark table-striped table-bordered border-primary border border-danger-subtle mt-5">
+        <thead class="table-light">
           <tr>
             <th scope="col">Id</th>
             <th scope="col">Tratamiento</th>
@@ -30,15 +30,16 @@
             <td>{{treatment.descriptionShort}}</td>
             <td>{{treatment.afterCare}}</td>
             <td>{{treatment.durationInMin}}</td>
-            <td>{{treatment.category}}</td>
-             <!-- Asociación Many To One -->
+            <td>{{treatment.category.name}}</td>
              <td>{{treatment.company.name}}</td>
             <td>
-              <button class="btn btn-success me-2" [routerLink]="['/treatments', treatment.id, 'detail']">
+              <button class="btn btn-outline-warning me-3" style="margin: 5px;"
+              [routerLink]="['/treatments', treatment.id, 'detail']">
                 <i class="bi bi-eye"></i>
                 Ver detalle
               </button>
-              <button class="btn btn-success me-2" [routerLink]="['/treatments', treatment.id, 'update']">
+              <button class="btn btn-outline-success me-3" style="margin: 5px;"
+              [routerLink]="['/treatments', treatment.id, 'update']">
                 <i class="bi bi-pencil"></i>
                 Editar
               </button>
