--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-12">
 
-      <h1 class="mt-5">Listado de Tratamientos <i class="bi bi-book"></i></h1>
+      <h1 class="mt-5">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
 
-      <button class="btn btn-primary"
+      <button class="btn btn-outline-info"
       routerLink="/treatments/create">Crear Tratamiento</button>
 
       <table class="table table-dark table-striped table-bordered border-primary border border-danger-subtle mt-5">
