--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -4,7 +4,7 @@
 @if (tratamiento) {
 
     <div>
-        Existe producto {{tratamiento.title}} con precio {{tratamiento.price}} €
+        Existe tratamiento {{tratamiento.title}} con precio {{tratamiento.price}} €
     </div>
     @if (tratamiento.price < 50) {
       <div style="color:green;">El tratamiento es barato</div>
