--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -32,11 +32,11 @@
             <td>{{company.treatments.title}}</td>
 
             <td>
-              <button class="btn btn-success me-2" [routerLink]="['/company', company.id, 'detail']">
+              <button class="btn btn-success me-2" [routerLink]="['/companies', company.id, 'detail']">
                 <i class="bi bi-eye"></i>
                 Ver detalle
               </button>
-              <button class="btn btn-success me-2" [routerLink]="['/company', company.id, 'update']">
+              <button class="btn btn-success me-2" [routerLink]="['/companies', company.id, 'update']">
                 <i class="bi bi-pencil"></i>
                 Editar
               </button>
