--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,6 +10,7 @@
         <a class="nav-link" href="#">Peluqueria</a>
         <a class="nav-link" href="treatments">Tratamientos</a>
         <a class="nav-link disabled" aria-disabled="true">Depilación</a>
+        <a class="nav-link" href="category">Categorias</a>
       </div>
     </div>
   </div>
