--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -14,7 +14,7 @@
                 <p class="card-text">{{categories}}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/category', category.id, 'detail']">Ver</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/categories', category.id, 'detail']">Ver</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
                   </div>
                   <small class="text-body-secondary">{{category}}</small>
