--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -8,16 +8,16 @@
             <div class="card shadow-sm">
 
               <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-              src="/assets/Img/uñas.png">
+              src="/assets/img/uñas.png">
 
               <div class="card-body">
-                <p class="card-text">{{categories}}</p>
+                <p class="card-text">{{category.name}}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/categories', category.id, 'detail']">Ver</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
                   </div>
-                  <small class="text-body-secondary">{{category}}</small>
+                  <small class="text-body-secondary">{{category.minAge}}</small>
                 </div>
               </div>
             </div>
