User-List modificado

--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,60 @@
-<p>user-detail works!</p>
+<div class="fusion-row">
+    <div class="fusion-one-third one_third fusion-layout-column fusion-spacing-yes col-color-hover"
+        style="margin-top:0px;margin-bottom:20px;">
+        <div class="fusion-column-wrapper"><span
+                class="fusion-imageframe imageframe-none imageframe-1 display-block full-image grey-hover"><a
+                    class="fusion-no-lightbox" href="https://www.marcoaldany.com/servicios/peluqueria/corte/"
+                    target="_self"> <img alt=""
+                        src="https://www.marcoaldany.com/wp-content/uploads/2018/09/servicio-corte-2.png"
+                        class="img-responsive"></a></span>
+            <ul class="fusion-checklist fusion-checklist-1 service service--corte"
+                style="font-size:13px;line-height:22.1px;">
+                <li class="fusion-li-item"><span style="height:22.1px;width:22.1px;margin-right:9.1px;"
+                        class="icon-wrapper circle-no"><i class="fusion-li-icon fa fa-angle-right"
+                            style="color:#151515;"></i></span>
+                    <div class="fusion-li-item-content" style="margin-left:31.2px;">
+                        <p>Corte de pelo mujer</p>
+                    </div>
+                </li>
+                <li class="fusion-li-item"><span style="height:22.1px;width:22.1px;margin-right:9.1px;"
+                        class="icon-wrapper circle-no"><i class="fusion-li-icon fa fa-angle-right"
+                            style="color:#151515;"></i></span>
+                    <div class="fusion-li-item-content" style="margin-left:31.2px;">
+                        <p>Corte de pelo hombre</p>
+                    </div>
+                </li>
+                <li class="fusion-li-item"><span style="height:22.1px;width:22.1px;margin-right:9.1px;"
+                        class="icon-wrapper circle-no"><i class="fusion-li-icon fa fa-angle-right"
+                            style="color:#151515;"></i></span>
+                    <div class="fusion-li-item-content" style="margin-left:31.2px;">
+                        <p>Corte de pelo infantil</p>
+                    </div>
+                </li>
+                <li class="fusion-li-item"><span style="height:22.1px;width:22.1px;margin-right:9.1px;"
+                        class="icon-wrapper circle-no"><i class="fusion-li-icon fa fa-angle-right"
+                            style="color:#151515;"></i></span>
+                    <div class="fusion-li-item-content" style="margin-left:31.2px;">
+                        <p>Corte de puntas</p>
+                    </div>
+                </li>
+                <li class="fusion-li-item"><span style="height:22.1px;width:22.1px;margin-right:9.1px;"
+                        class="icon-wrapper circle-no"><i class="fusion-li-icon fa fa-angle-right"
+                            style="color:#151515;"></i></span>
+                    <div class="fusion-li-item-content" style="margin-left:31.2px;">
+                        <p>Diseño barba</p>
+                    </div>
+                </li>
+                <li class="fusion-li-item"><span style="height:22.1px;width:22.1px;margin-right:9.1px;"
+                        class="icon-wrapper circle-no"><i class="fusion-li-icon fa fa-angle-right"
+                            style="color:#151515;"></i></span>
+                    <div class="fusion-li-item-content" style="margin-left:31.2px;">
+                        <p class="shop">
+                            <a href="https://www.marcoaldany.com/servicios/ofertas/peluqueria/">Ver ofertas </a>
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    
+</div>
