--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,8 +9,9 @@
         <a class="nav-link active" aria-current="page" href="#">Spa</a>
         <a class="nav-link" href="#">Peluqueria</a>
         <a class="nav-link" href="treatments">Tratamientos</a>
-        <a class="nav-link disabled" aria-disabled="true">Depilación</a>
         <a class="nav-link" href="category">Categorias</a>
+        <!-- <a class="nav-link disabled" aria-disabled="true">Depilación</a> -->
+        <a class="nav-link" href="users">Usuarios</a>
       </div>
     </div>
   </div>
