--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -2,54 +2,33 @@
   <div class="row">
     <div class="col-12">
 
-      <h1 class="mt-5">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
+      <h1 class="mt-5 text-center text-primary-emphasis">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
+
+      <div class="container">
+        <div class="row">
+          @for (treatment of treatments; track treatment.id) {
+          <div class="col-md-6">
+            <div class="card mb-3 bg-success-subtle text-primary-emphasis">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img src="/assets/img/uñas.png" class="card-img" alt="Placeholder">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">{{treatment.title}}</h5>
+                      <p class="card-text">{{treatment.descriptionShort}}</p>
+                      <p class="card-text"><small class="text-primary-emphasis">{{treatment.category.name}}</small></p>
+                      <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/treatments', treatment.id, 'detail']">Descripción</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/treatments', treatment.id, 'update']">Editar</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/treatments', treatment.id, 'booking']">Reservar</button>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        }
+        </div>
+      </div>
 
       <button class="btn btn-outline-info"
       routerLink="/treatments/create">Crear Tratamiento</button>
-
-      <table class="table table-dark table-striped table-bordered border-primary border border-danger-subtle mt-5">
-        <thead class="table-light">
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Tratamiento</th>
-            <th scope="col">Precio</th>
-            <th scope="col">Descripción</th>
-            <th scope="col">Cuidados</th>
-            <th scope="col">Duración</th>
-            <th scope="col">Categorías</th>
-            <th scope="col">Centro de Servicio</th>
-            <th scope="col">Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          @for(treatment of treatments; track treatment.id) {
-          <tr>
-            <td>{{treatment.id}}</td>
-            <td>{{treatment.title}}</td>
-            <td>{{treatment.price}}</td>
-            <td>{{treatment.descriptionShort}}</td>
-            <td>{{treatment.afterCare}}</td>
-            <td>{{treatment.durationInMin}}</td>
-            <td>{{treatment.category.name}}</td>
-             <td>{{treatment.company.name}}</td>
-            <td>
-              <button class="btn btn-outline-warning me-3" style="margin: 5px;"
-              [routerLink]="['/treatments', treatment.id, 'detail']">
-                <i class="bi bi-eye"></i>
-                Ver detalle
-              </button>
-              <button class="btn btn-outline-success me-3" style="margin: 5px;"
-              [routerLink]="['/treatments', treatment.id, 'update']">
-                <i class="bi bi-pencil"></i>
-                Editar
-              </button>
-
-
-            </td>
-          </tr>
-          }
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
