User_list corregido, User_detail, json, img actualizado

--- a/frontend/src/app/user-list/user-list.component.html
+++ b/frontend/src/app/user-list/user-list.component.html
@@ -41,7 +41,7 @@
                                     /* Otros estilos según sea necesario */
                                 }
                             </style>
-                            <button class="btn mi-boton-personalizado me-2 my-2" [routerLink]="['/users/:id']">
+                            <button class="btn mi-boton-personalizado me-2 my-2" [routerLink]="['/users', user.id]">
                                 <i class="bi bi-eye"></i>
                                 Ver detalle
                             </button>
