--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -22,7 +22,7 @@
   
         @if(user){
         <div class="container px-4 py-5" id="icon-grid">
-          <h2 class="pb-2 border-bottom">Usuario con id {{user.id}}</h2>
+          <h2 class="pb-2 border-bottom">Usuario registrado Nº {{user.id}}</h2>
   
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
 
